--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,37 @@
+version: "3.8"
 services:
   api:
-    build:
-      dockerfile: Dockerfile
-      context: .
-      # Only will build development stage from our dockerfile
-      target: development
-    volumes:
-      - .:/usr/src/app
-    env_file:
-    - .env
-    # Run a command against the development stage of the image
-    command: npm run start:dev
-    ports:
-      - 3000:3000
+    container_name: api
+    image: nest_crud-api
+    # build: 
+    #   dockerfile: Dockerfile
+    #   context: .
     depends_on:
       - redis
       - postgres
+    environment:
+      DATABASE_URL: postgres://user:password@postgres:5432/db
+      JWT_SECRET: 1hard_to_guess_secret7890a
+      PORT: 3000
+    ports:
+      - "3000:3000"
 
   redis:
     container_name: cache
     image: redis
     ports:
-      - 6379:6379
+      - "6379:6379"
     volumes:
       - redis:/data
 
   postgres:
     image: postgres
-    restart: always
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - '5432:5432'
-    volumes:
-      - docker-nest-postgres:/var/lib/postgresql/data
+      - "5432:5432"
 
 volumes:
   redis:
