--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ services:
     depends_on:
       - redis
       - postgres
+    env_file:
+      - .env
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=public
       AT_SECRET: ${AT_SECRET}
       RT_SECRET: ${RT_SECRET}
       PORT: 3000
